2008-09-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/specmat.cpp, itpp/base/specmat.h: Fix broken
	implementation of toeplitz() function.

	The previous implementation generated incorrect matrices for two
	complex-valued input vectors. This patch fixes this problem. BTW,
	the implementation is now based on a template function, so bmat,
	smat and imat matrices can now be generated.

	Thanks to Niklas Johansson for reporting this issue. This closes
	bug report [2110119].

2008-09-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* test/vec_test.cpp, test/vec_test.ref: Revert part of SVN
	revision 1613.

	I/O stream labels for infinity and not-a-number have different
	case sensitivity in various supported GCC versions ("inf" vs.
	"Inf", "nan" vs. "NaN"). Thus we can not test for them in a vector
	initialisation from string.

2008-08-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itassert.h: Get rid of config.h dependency from
	itassert.h header file.

	* itpp/comm/galois.cpp: Fix bug in GF::set_size() method, which
	was reported by Stephan Ludwig.

	Because "alphapow" and "logalpha" are static variables, every
	instantiation of the GF class uses the very same of them. If
	different instantiations of different Galois fields access this
	(e.g. 2^8 and 2^6, while 2^6 has been created first), the latter
	might overwrite/delete the log table of the previous while calling
	GF::set_size() method (2^8 widens the array to m+1=9, while not
	copying the 2^6 entries). The solution is to copy the contents of
	"alphapow" and "logalpha" when resizing them.

	Thanks to Stephan Ludwig for noticing this problem and also to
	EndZone for confirming it.

	* itpp/base/sort.h: Make sort() and sort_index() work for vectors
	with less than two elements.

	Without this patch, the above two functions resulted in an
	assertion error. Thanks to Yngve Seln for reporting this problem.

2008-08-18  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>
