@@ -1,5 +1,11 @@
 2008-09-12  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* tests/Makefile.am, tests/specmat_test.cpp,
+	tests/specmat_test.ref: Add specmat_test program for testing
+	special vectors and matrices.
+
+	Initially only toeplitz() function is tested.
+
 	* itpp/base/specmat.cpp, itpp/base/specmat.h: Fix broken
 	implementation of toeplitz() function.
 
